# Skeleton

./: CMakeLists.txt  README.md
includes/: hello.hpp
sources/: hello.cpp  main.cpp
